# carbon-foodprint-scanner

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIAGRAMS_SCHEMAS.md  LICENSE  Makefile  Makefile.bot  Makefile.data  Makefile.dev  README.md  REPO_PUBLIC_SETUP.md  channel_welcome_message.txt  env.example  pyproject.toml  requirements.txt
data_engineering/data/analysis/: README.md
data_engineering/data/cache/: README.md
data_engineering/data/processed/: README.md
data_engineering/data/reports/: README.md
data_engineering/data/reports/loading/: README.md
data_engineering/data/reports/transformation/: README.md
data_engineering/orchestrators/reporting/: __init__.py
data_engineering/orchestrators/tests/: __init__.py
data_engineering/scripts/analysis/: README.md  analyze_raw_data_quality.py
data_engineering/scripts/collection/: README.md  complete_extraction_pipeline.py  generate_production_reports.py
data_engineering/scripts/loading/: README.md  load_products_to_supabase.py
data_engineering/scripts/setup/: README.md  set_up.py  validate_complete_pipeline.py  validate_environment.py
src/food_scanner/bot/: README.md  __init__.py  barcode_scanner.py  database_service.py  generate_telegram_channel_message.py  message_templates.py  run_telegram_bot.py
src/food_scanner/core/: README.md  config.py  constants.py
src/food_scanner/data/: README.md  data_backup_manager.py
src/food_scanner/infrastructure/: README.md
tests/: __init__.py  conftest.py
tools/: README_GENERATOR_SUMMARY.md  generate_mermaid_diagrams.py  generate_readme.py
(+69 files in other folders)
